--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -137,7 +137,7 @@
                     <tr >
                         <!-- Backlog-->
                         <td rowspan="2">
-                            <div class="first-el kanban-block story-table" id="todo" class="backlog" ondrop="drop(event)"
+                            <div class="first-el kanban-block story-table" id="backlog-header" class="backlog" ondrop="drop(event)"
                                 ondragover="allowDrop(event)">
                                 <strong>
                                     <h2 class="task-headers first-el">
@@ -150,7 +150,7 @@
                         
                         <!-- Done-->
                         <td rowspan="2">                    
-                            <div class="kanban-block story-table last-el" id="done" class="done" ondrop="drop(event)"
+                            <div class="kanban-block story-table last-el" id="done-header" class="done" ondrop="drop(event)"
                                 ondragover="allowDrop(event)">
                                 <strong>
                                     <h2 class="task-headers last-el">
