--- a/project/src/main/resources/static/html/kanbanboard.html
+++ b/project/src/main/resources/static/html/kanbanboard.html
@@ -88,6 +88,35 @@
 
             </div>
 
+            <div class="create-new-task-block" id="create-new-task-block">
+                <!-- cancel cross -->
+                <span style="font-size:25px;cursor:pointer" id="cancel-button" onclick="cancelCreateTask()">&#10799;</span>
+                <span id="storyPriority"></span>
+                <div>
+                    <input type="text" id="storyNameForm" placeholder="Name" maxlength="50"></input>
+                    <textarea id="descritptionForm" rows="3" placeholder="Description" maxlength="300"></textarea>
+                    <textarea id="definitionOfDoneForm" rows="2" placeholder="Definition of done" maxlength="300"></textarea>
+                    <!-- Priority -->
+                    <select id="storyPriorityForm">
+                        <option class="high" value="!">High</option>
+                        <option class="high" value="•">Medium</option>
+                        <option class="low" value="↓">Low</option>
+                    </select>
+                    <!-- Selection color -->
+                    <select id="storyColorForm">
+                        <option class="red" value="#e60000">red</option>
+                        <option class="yellow" value="#e6bf33">yellow</option>
+                        <option class="green" value="#aacc33">green</option>
+                        <option class="blue" value="#6495ed">blue</option>
+                        <option class="purple" value="#8e7cc3">purple</option>
+                    </select>
+                    <div class="storyDueDateFormTitle">Due date:</div>
+                    <input type="datetime-local" id="storyDueDate"></input>
+                    <button type="button" class="btn btn-danger" id="save-button" onclick="saveTask()">Save</button>
+                    <button type="button" class="btn btn-danger" id="delete-button">Delete</button>
+                    <button type="button" class="btn btn-danger" id="update-button">Save Changes</button>
+                </div>
+            </div>
             <!-- button to open the sidebar-->
             <span style="font-size:30px;cursor:pointer" onclick="manageSidebar()">&#9776;</span>
             <!-- Kanban board -->
